<resources>
    <string name="app_name">InstaClone</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="phone_number_username_or_email">Phone number, username or email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up.</string>
</resources>