<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:backgroundTint="@color/white"
    >

    <ImageView
        android:id="@+id/insta_logo_iw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/insta_logo1"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo" />


    <EditText
        android:id="@+id/userName_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/phone_number_username_or_email"
        android:textColorHint="#696969"
        android:textSize="14sp"
        android:background="@drawable/custom_input_bg"
        android:padding="10sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="14sp"
        android:background="@drawable/custom_input_bg"
        android:textColorHint="#696969"
        android:padding="10dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/forgot_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="right|center"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@color/black" />


    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        >

        <TextView
            android:id="@+id/end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signUp_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>